--- a/organicseeds_webshop_api/tests/testdata/items_post.yaml
+++ b/organicseeds_webshop_api/tests/testdata/items_post.yaml
@@ -74,15 +74,29 @@ items:
                     # default 1
     max_sale_qty: 100 # integer ohne 0, optional, ==  höchstbestellmenge,
                       # default 1000000
+    inventory_status: 2 #<invetnory_status> [1|2|3|4|5|6|7|8]
+                        # 2 = available
+
+    # magento Lagerverwaltungs features, zu klären ob/wie nutzen
+
+    #inventory_qty : 5 # integer, negativ möglich # Lagerbestand
+    #min_inventory_qty: # integer, negative möglich # Laberbestand ab dem der Status zu "Out of Stock" wechselt" # Default 0
+    #backorders: 0 # <allow_backorders> # Default 0
+                    # 0 = keine Nachbestellungen
+                    # 1 = erlaube Nachbestellungen wenn Lagerbestand < 1
+                    # 2 = erlaube Nachbestellungen und Sende Nachricht an Kunden
 
 
-    # Braucht Überarbeitung...:
+    # Spezielle Bestellabläufe, zu klären ob/wie nutzen
 
+    # Verpackungseinheiten bestellen:
     #vpe: 5 # integer ohne 0, optional == sale qty increments bei Magento
     #vpe_enabled: True # Bool, optional, default False,  == enable qty increments
                        # bei Magento, verkaufe nur Mengen die in Verpackunseinheiten abbildbar sind.
-     #custom_max_sale_qty: 300 # integer ohne 0, maximaler Wert in Gramm ohne
-                               # überprüfung bestellt werden kann # optional
-     #custom_min_sale_qty: 300 # int, maximaler Wert in Gramm der ohne
-                               # überprüfung bestellt werden kann  # optional
+
+    # Freie Mengen (gramm bestellen):
+    #custom_max_sale_qty: 300 # integer ohne 0, maximaler Wert in Gramm ohne
+                              # überprüfung bestellt werden kann # optional
+    #custom_min_sale_qty: 300 # int, maximaler Wert in Gramm der ohne
+                              # überprüfung bestellt werden kann  # optional
 
