--- a/organicseeds_webshop_api/tests/testdata/unit_of_measures_post.yaml
+++ b/organicseeds_webshop_api/tests/testdata/unit_of_measures_post.yaml
@@ -1,6 +1,6 @@
 unit_of_measures:
   -
-    id: portion # id
+    id: portion # Identifier
     title:
       default: Portion # StringTranslations
       fr: Portiòn
