--- a/organicseeds_webshop_api/tests/testdata/vpe_types_post.yaml
+++ b/organicseeds_webshop_api/tests/testdata/vpe_types_post.yaml
@@ -1,6 +1,6 @@
 vpe_types:
   -
-    id: saatscheibe # id
+    id: saatscheibe # Identifier
     title:
       default: Saatscheibe # StringTranslations
       ch: Saatscheibe
