--- a/organicseeds_webshop_api/tests/testdata/items_post.yaml
+++ b/organicseeds_webshop_api/tests/testdata/items_post.yaml
@@ -21,7 +21,7 @@ items:
 
     # Item fieds
     description: # StringTranslation
-        default: Ausführliche Beschreibung
+        default: Ausfuehrliche Beschreibung
     #category_ids :   # sequence of reference # optional
 
     sku: itemka32 # Identifier (Artikelnummer)
