--- a/organicseeds_webshop_api/tests/testdata/categories_post.yaml
+++ b/organicseeds_webshop_api/tests/testdata/categories_post.yaml
@@ -38,7 +38,7 @@ categories:
     title: 
         default: Gartenwerkzeuge
     shortdescription:
-        default: nützliches
+        default: nuetzliches
 
   -
     id: 1002_gemuese
@@ -49,7 +49,7 @@ categories:
         - [ch_hobby, True] 
         - [ch_profi, True] 
     title: 
-        default: Gemüse
+        default: Gemuese
     shortdescription:
         default:
 
