--- a/organicseeds_webshop_api/tests/testdata/categories_post.yaml
+++ b/organicseeds_webshop_api/tests/testdata/categories_post.yaml
@@ -23,7 +23,7 @@ categories:
         - [ch_hobby, True] 
         - [ch_profi, True] 
     title: 
-        default: Aktuelle Aussaten
+        default: Aktuelle Aussaten2
     shortdescription: 
         default: 
 
