--- a/organicseeds_webshop_api/tests/testdata/item_groups_post.yaml
+++ b/organicseeds_webshop_api/tests/testdata/item_groups_post.yaml
@@ -11,8 +11,8 @@ item_groups:
         - [ch_profi, True]  
         - [ch_resell, True]  
     title:  
-      default: Aktuelle Aussaten 
-      fr: actuelle 
+      default: Karottensorte 
+      fr: carotte 
     shortdescription:  
       default: Karotten, Ruebli, Moehren 
       fr: carotte 
