--- a/organicseeds_webshop_api/tests/testdata/items_post.yaml
+++ b/organicseeds_webshop_api/tests/testdata/items_post.yaml
@@ -81,7 +81,7 @@ items:
     #shops:
         #- (ch_hobby, True)
     #title:
-      #default: title 
+      #default: title2
     #shortdescription: 
       #default: kurzbeschreibung 
 
