generate html coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,5 +7,6 @@ addopts =
     --tb=native
     --cov=organicseeds_webshop_api
     --cov-report=term-missing
+    --cov-report=html
 python_files = test_*.py
 
