fix vpe test data

--- a/organicseeds_webshop_api/tests/testdata/vpe_types_post.yaml
+++ b/organicseeds_webshop_api/tests/testdata/vpe_types_post.yaml
@@ -3,8 +3,8 @@ vpe_types:
     id: saatscheibe # Identifier
     title:
       default: Saatscheibe # StringTranslations
-      ch: Saatscheibe
+      fr: Saatscheibe fr
     legend:
-        default: Kleine nützliche Scheiben..  # StringTranslations
-        en: dolls..
+      default: Kleine nützliche Scheiben..  # StringTranslations
+      en: dolls..
  
