disable magento auto index

--- a/development.ini
+++ b/development.ini
@@ -18,6 +18,7 @@ pyramid.includes =
 
 tm.attempts = 3
 zodbconn.uri = file://%(here)s/Data.fs?connection_cache_size=20000
+magento_whiz_script = ../../../bin/whiz
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
