use registry to set magento api user/url

--- a/development.ini
+++ b/development.ini
@@ -18,7 +18,12 @@ pyramid.includes =
 
 tm.attempts = 3
 zodbconn.uri = file://%(here)s/Data.fs?connection_cache_size=20000
-magento_whiz_script = ../../../bin/whiz
+magento_whiz_script = %(here)s/../../bin/whiz
+magento_rpc_user = u"webshop_api"
+magento_rpc_secret = u"oxXCcvIAhdXcw"
+magento_apiurl = "http://hobby.developlocal.sativa.jokasis.de/"
+ 
+
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
